force-app/main/default/objects/Mask_Config__c/Mask_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration for Masking data values</description>
    <label>Mask Config</label>
    <nameField>
        <displayFormat>MCONF-{00000}</displayFormat>
        <label>Mask Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mask Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>