force-app/main/default/objects/Mask_Config__c/fields/Mask__c.field-meta.xml
<CustomField>
    <fullName>Mask__c</fullName>
    <description>The Mask to be used</description>
    <inlineHelpText>The Mask to be used</inlineHelpText>
    <label>Mask</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>