force-app/main/default/objects/Mask_Config__c/fields/Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Name__c</fullName>
    <description>API Name of source field from the source SObject</description>
    <inlineHelpText>API Name of source field from the source SObject</inlineHelpText>
    <label>Source Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>