force-app/main/default/objects/Mask_Config__c/fields/Source_SObject__c.field-meta.xml
<CustomField>
    <fullName>Source_SObject__c</fullName>
    <description>API Name of Source SObject</description>
    <inlineHelpText>API Name of Source SObject</inlineHelpText>
    <label>Source SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>